# contact-center-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
cowork/: PROMPT.md
deploy/: deploy.sh  push-secrets.sh  scheduler.sh
docs/: 01-arquitectura.md  02-instalacion.md  03-skills.md  04-agentes-langgraph.md  05-integraciones-crm.md  06-scheduling-gcp.md  07-cowork.md  08-mejores-practicas.md  09-manychat.md
knowledge_base/: cuenta-acceso.md  devoluciones.md  facturacion.md
skills/: README.md
skills/crm-update/: SKILL.md
skills/escalation-routing/: SKILL.md
skills/knowledge-retrieval/: SKILL.md
skills/qa-review/: SKILL.md
skills/response-writing/: SKILL.md
skills/ticket-triage/: SKILL.md
src/contact_center/: __init__.py  actions.py  config.py  gcp_secrets.py  graph.py  llm.py  run_batch.py  schemas.py  services.py  state.py  storage.py
src/contact_center/agents/: __init__.py  classifier.py  critic.py  producer.py  responder.py  retriever.py  router.py
src/contact_center/integrations/: __init__.py  agenda.py  knowledge.py  managed_agents.py  manychat.py  notify.py  search.py
src/contact_center/integrations/crm/: __init__.py  base.py  generic.py  hubspot.py  zendesk.py
src/contact_center/webapp/: __init__.py  app.py
src/contact_center/webapp/templates/: base.html  index.html  login.html  run_detail.html
src/contact_center/webapp/templates/partials/: result.html
tests/: test_agenda.py  test_auth.py  test_crm.py  test_manychat.py  test_schemas.py  test_smoke.py  test_storage.py
