[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contact-center-agents"
version = "0.1.0"
description = "Equipo multiagente de soporte (LangGraph + Claude): clasifica, recupera conocimiento, redacta y revalida respuestas a tickets, y las publica en el CRM (Zendesk/HubSpot/genérico). Con dashboard de aprobación y listo para GCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sredondomercuria" }]
keywords = ["langgraph", "claude", "anthropic", "agents", "contact-center", "support", "zendesk", "hubspot"]

dependencies = [
    "anthropic>=0.49.0",
    "langgraph>=0.2.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "markdown>=3.6",
]

[project.optional-dependencies]
integrations = ["tavily-python>=0.5"]
gcp = ["google-cloud-secret-manager>=2.20"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
cc-batch = "contact_center.run_batch:main"
cc-web = "contact_center.webapp.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/contact_center"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
